--- a/App/static/css/mycss.css
+++ b/App/static/css/mycss.css
@@ -14,15 +14,16 @@ input[type=textsearch] {
     transition: width 0.4s ease-in-out;
 }
 
-input[type=textsearch]:focus {
-    width: 100%;
+.navbar-header{
+  background-color:#333
 }
 
 side-nav{
   width: 100px
+  background-color:#333
 }
 #sideways{
-  -webkit-transform: rotate(90deg);
+  padding-top: 160px;
 }
 
 #page-wrapper {
@@ -377,7 +378,12 @@ repeat-x;
     text-shadow: 0 1px 0 rgba(255,255,255,0.2);
     border-radius: 15px 15px 15px 0px;
 }
-
+#menu{
+  padding-left: 240px
+}
+.navbar-inverse{
+  background-color: #333;
+}
 
 
 .form-style-5 input[type="submit"],
