--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -2,6 +2,29 @@
 <html lang="en">
 
 <head>
+  <style>
+  input[type=textsearch] {
+      width: 120px;
+      box-sizing: border-box;
+      height:100%;
+      border: 2px solid #ccc;
+      border-radius: 4px;
+      font-size: 16px;
+      background-color: white;
+      background-image: url('searchicon.png');
+      background-position: 10px 10px;
+      background-repeat: no-repeat;
+      padding: 12px 20px 12px 40px;
+      -webkit-transition: width 0.4s ease-in-out;
+      transition: width 0.4s ease-in-out;
+  }
+  input[type=textsearch]:focus {
+      width: 100%;
+  }
+.navbar{
+    background-color:#333
+  }
+  </style>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +69,7 @@
     <div id="wrapper">
 
         <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: #333;" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -56,11 +79,8 @@
                     <span class="icon-bar"></span>
                 </button>
             <!-- Top Menu Items -->
+            <a class="navbar-brand" href="index.html">Dublin Dash </a>
                 <ul id="menu">
-                  <li>
-                  <li><img src="/static/images/Offical3.png" alt="Dublin Dash" style="width:50px;height:50px;">
-                  <a class="navbar-brand" href="index.html">Dublin Dash </a>
-                </li>
                 <li>
                   <a href="#">Home</a></li>
                     <li>
@@ -88,6 +108,7 @@
                         <input type="textsearch" name='Search' placeholder="Search By Area" /><br />
                       </form>
                     </div>
+
               </li>
               </ul>
             </div>
@@ -96,9 +117,6 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                   <div id ='sideways'>
-                    <li class="active">
-                        <a href="index"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
-                    </li>
                     <li>
                         <a href="{{ url_for('year', my_var='2016') }}"><i class="fa fa-fw fa-bar-chart-o"></i> 2016</a>
                     </li>
@@ -121,15 +139,13 @@
                     <li>
                         <a href="{{ url_for('year', my_var='2010') }}"><i class="fa fa-fw fa-file"></i> 2010</a>
                     </li>
-                    <li>
-                        <a href="index-rtl.html"><i class="fa fa-fw fa-dashboard"></i> RTL Dashboard</a>
-                    </li>
                   </div>
                 </ul>
             </div>
           </div>
             <!-- /.navbar-collapse -->
         </nav>
+
 
 
     {% block content %}{% endblock %}
